// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HamburgerMenu - Logged In should render the Sections and account section on smaller devices 1`] = `
<DocumentFragment>
  <nav
    aria-label="menu-vertical"
    class="css-1fherrp"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="css-gre9re"
      >
        <div
          aria-label="Search Bar"
          class="css-1l9jkg9"
          role="region"
        >
          <div
            class="css-xsmvhl"
          >
            <div
              class="css-wjzosl"
            >
              <svg
                class="css-192eire"
                fill="none"
                height="16"
                overrides="[object Object]"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.022 16-5.844-5.844a4.9 4.9 0 0 1-1.556.9 5.5 5.5 0 0 1-1.889.322c-1.6 0-2.955-.556-4.066-1.667C.556 8.6 0 7.26 0 5.69c0-1.57.556-2.911 1.667-4.022C2.777.556 4.126 0 5.71 0c1.57 0 2.908.556 4.011 1.667 1.104 1.11 1.656 2.452 1.656 4.022 0 .637-.104 1.252-.311 1.844a5.64 5.64 0 0 1-.934 1.667L16 15.022l-.978.978Zm-9.31-5.956c1.2 0 2.221-.425 3.066-1.277.844-.852 1.266-1.878 1.266-3.078S9.622 3.463 8.778 2.61C7.933 1.76 6.91 1.333 5.71 1.333c-1.215 0-2.248.426-3.1 1.278-.852.852-1.278 1.878-1.278 3.078s.426 2.226 1.278 3.078c.852.852 1.885 1.277 3.1 1.277Z"
                  fill="currentcolor"
                />
              </svg>
            </div>
            <input
              aria-describedby="icon-placement-at"
              aria-label="Search times.co.uk"
              class="css-57m4xd"
              id="icon-placement"
              placeholder="Search times.co.uk"
              type="text"
            />
          </div>
        </div>
        <nav
          aria-label="Navigation Menu"
          class="css-5p0tuz"
          data-testid="menu-container"
          role="region"
        >
          <ul
            role="list"
          >
            <button
              class="css-6ks1dw"
              data-testid="button"
              type="button"
            >
              <p
                class="css-18mb4bh"
              >
                Sections
              </p>
            </button>
            <button
              class="css-sfx3g"
              data-testid="button"
              type="button"
            >
              <p
                class="css-18mb4bh"
              >
                My account
              </p>
            </button>
          </ul>
        </nav>
      </div>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <a
          class="css-1r6nnlb"
          data-testid="buttonLink"
          href="/main-menu-1"
          id="vertical-main-menu-1"
        >
          <span
            class="css-hrqj8j"
          >
            Main Menu 1
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <button
          aria-expanded="false"
          class="css-mayb9l"
          data-testid="menu-sub-button"
          id="vertical-main-menu-2"
          type="button"
        >
          <span
            class="css-hrqj8j"
          >
            Main Menu 2
          </span>
          <svg
            aria-hidden="true"
            class="css-bl48kn-EmotionIconBase ex0cdmw0"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </button>
        <ul
          class="css-n5iuvv"
        >
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/item-1"
              id="vertical-item-1"
            >
              <span
                class="css-hrqj8j"
              >
                Item 1
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/item-2"
              id="vertical-item-2"
            >
              <span
                class="css-hrqj8j"
              >
                Item 2
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <button
          aria-expanded="false"
          class="css-mayb9l"
          data-testid="menu-sub-button"
          id="vertical-main-menu-3"
          type="button"
        >
          <span
            class="css-hrqj8j"
          >
            Main Menu 3
          </span>
          <svg
            aria-hidden="true"
            class="css-bl48kn-EmotionIconBase ex0cdmw0"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </button>
        <ul
          class="css-n5iuvv"
        >
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/item-1"
              id="vertical-item-1"
            >
              <span
                class="css-hrqj8j"
              >
                Menu 3 Item 1
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/menu-3-item-2"
              id="vertical-menu-3-item-2"
            >
              <span
                class="css-hrqj8j"
              >
                Menu 3 Item 2
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <div
        class="css-12ro3b"
      >
        <p
          class="css-9id5ai"
        >
          More
        </p>
      </div>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <a
          class="css-1r6nnlb"
          data-testid="buttonLink"
          href="/more-1"
          id="vertical-more-1"
        >
          <span
            class="css-hrqj8j"
          >
            More 1
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <a
          class="css-1r6nnlb"
          data-testid="buttonLink"
          href="/more-2"
          id="vertical-more-2"
        >
          <span
            class="css-hrqj8j"
          >
            More 2
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`HamburgerMenu - Logged Out should render the login and subscribe button section on smaller devices 1`] = `
<DocumentFragment>
  <nav
    aria-label="menu-vertical"
    class="css-1fherrp"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="css-gre9re"
      >
        <div
          aria-label="Navigation Menu"
          class="css-5qb4r1"
          role="region"
          style="background-color: rgb(29, 29, 27);"
        >
          <div
            class="css-14f0ndj"
          >
            <button
              class="css-5kf7f9"
              data-testid="button"
              type="button"
            >
              <span
                class="css-1kfwj8t"
              >
                Log in
              </span>
            </button>
            <div
              class="css-rl9h2w"
            />
            <button
              class="css-f5vstw"
              data-testid="button"
              type="button"
            >
              <span
                class="css-1kfwj8t"
              >
                Subscribe
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Search Bar"
          class="css-1djk6be"
          role="region"
        >
          <div
            class="css-xsmvhl"
          >
            <div
              class="css-wjzosl"
            >
              <svg
                class="css-192eire"
                fill="none"
                height="16"
                overrides="[object Object]"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.022 16-5.844-5.844a4.9 4.9 0 0 1-1.556.9 5.5 5.5 0 0 1-1.889.322c-1.6 0-2.955-.556-4.066-1.667C.556 8.6 0 7.26 0 5.69c0-1.57.556-2.911 1.667-4.022C2.777.556 4.126 0 5.71 0c1.57 0 2.908.556 4.011 1.667 1.104 1.11 1.656 2.452 1.656 4.022 0 .637-.104 1.252-.311 1.844a5.64 5.64 0 0 1-.934 1.667L16 15.022l-.978.978Zm-9.31-5.956c1.2 0 2.221-.425 3.066-1.277.844-.852 1.266-1.878 1.266-3.078S9.622 3.463 8.778 2.61C7.933 1.76 6.91 1.333 5.71 1.333c-1.215 0-2.248.426-3.1 1.278-.852.852-1.278 1.878-1.278 3.078s.426 2.226 1.278 3.078c.852.852 1.885 1.277 3.1 1.277Z"
                  fill="currentcolor"
                />
              </svg>
            </div>
            <input
              aria-describedby="icon-placement-at"
              aria-label="Search times.co.uk"
              class="css-57m4xd"
              id="icon-placement"
              placeholder="Search times.co.uk"
              type="text"
            />
          </div>
        </div>
      </div>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <a
          class="css-1r6nnlb"
          data-testid="buttonLink"
          href="/main-menu-1"
          id="vertical-main-menu-1"
        >
          <span
            class="css-hrqj8j"
          >
            Main Menu 1
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <button
          aria-expanded="false"
          class="css-mayb9l"
          data-testid="menu-sub-button"
          id="vertical-main-menu-2"
          type="button"
        >
          <span
            class="css-hrqj8j"
          >
            Main Menu 2
          </span>
          <svg
            aria-hidden="true"
            class="css-bl48kn-EmotionIconBase ex0cdmw0"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </button>
        <ul
          class="css-n5iuvv"
        >
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/item-1"
              id="vertical-item-1"
            >
              <span
                class="css-hrqj8j"
              >
                Item 1
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/item-2"
              id="vertical-item-2"
            >
              <span
                class="css-hrqj8j"
              >
                Item 2
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <button
          aria-expanded="false"
          class="css-mayb9l"
          data-testid="menu-sub-button"
          id="vertical-main-menu-3"
          type="button"
        >
          <span
            class="css-hrqj8j"
          >
            Main Menu 3
          </span>
          <svg
            aria-hidden="true"
            class="css-bl48kn-EmotionIconBase ex0cdmw0"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </button>
        <ul
          class="css-n5iuvv"
        >
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/item-1"
              id="vertical-item-1"
            >
              <span
                class="css-hrqj8j"
              >
                Menu 3 Item 1
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/menu-3-item-2"
              id="vertical-menu-3-item-2"
            >
              <span
                class="css-hrqj8j"
              >
                Menu 3 Item 2
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <div
        class="css-12ro3b"
      >
        <p
          class="css-9id5ai"
        >
          More
        </p>
      </div>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <a
          class="css-1r6nnlb"
          data-testid="buttonLink"
          href="/more-1"
          id="vertical-more-1"
        >
          <span
            class="css-hrqj8j"
          >
            More 1
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <a
          class="css-1r6nnlb"
          data-testid="buttonLink"
          href="/more-2"
          id="vertical-more-2"
        >
          <span
            class="css-hrqj8j"
          >
            More 2
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`HamburgerMenu should render the component 1`] = `
<DocumentFragment>
  <nav
    aria-label="menu-vertical"
    class="css-1fherrp"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="css-gre9re"
      >
        <div
          aria-label="Search Bar"
          class="css-1l9jkg9"
          role="region"
        >
          <div
            class="css-xsmvhl"
          >
            <div
              class="css-wjzosl"
            >
              <svg
                class="css-192eire"
                fill="none"
                height="16"
                overrides="[object Object]"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.022 16-5.844-5.844a4.9 4.9 0 0 1-1.556.9 5.5 5.5 0 0 1-1.889.322c-1.6 0-2.955-.556-4.066-1.667C.556 8.6 0 7.26 0 5.69c0-1.57.556-2.911 1.667-4.022C2.777.556 4.126 0 5.71 0c1.57 0 2.908.556 4.011 1.667 1.104 1.11 1.656 2.452 1.656 4.022 0 .637-.104 1.252-.311 1.844a5.64 5.64 0 0 1-.934 1.667L16 15.022l-.978.978Zm-9.31-5.956c1.2 0 2.221-.425 3.066-1.277.844-.852 1.266-1.878 1.266-3.078S9.622 3.463 8.778 2.61C7.933 1.76 6.91 1.333 5.71 1.333c-1.215 0-2.248.426-3.1 1.278-.852.852-1.278 1.878-1.278 3.078s.426 2.226 1.278 3.078c.852.852 1.885 1.277 3.1 1.277Z"
                  fill="currentcolor"
                />
              </svg>
            </div>
            <input
              aria-describedby="icon-placement-at"
              aria-label="Search times.co.uk"
              class="css-57m4xd"
              id="icon-placement"
              placeholder="Search times.co.uk"
              type="text"
            />
          </div>
        </div>
        <nav
          aria-label="Navigation Menu"
          class="css-5p0tuz"
          data-testid="menu-container"
          role="region"
        >
          <ul
            role="list"
          >
            <button
              class="css-6ks1dw"
              data-testid="button"
              type="button"
            >
              <p
                class="css-18mb4bh"
              >
                Sections
              </p>
            </button>
            <button
              class="css-sfx3g"
              data-testid="button"
              type="button"
            >
              <p
                class="css-18mb4bh"
              >
                My account
              </p>
            </button>
          </ul>
        </nav>
      </div>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <a
          class="css-1r6nnlb"
          data-testid="buttonLink"
          href="/main-menu-1"
          id="vertical-main-menu-1"
        >
          <span
            class="css-hrqj8j"
          >
            Main Menu 1
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <button
          aria-expanded="false"
          class="css-mayb9l"
          data-testid="menu-sub-button"
          id="vertical-main-menu-2"
          type="button"
        >
          <span
            class="css-hrqj8j"
          >
            Main Menu 2
          </span>
          <svg
            aria-hidden="true"
            class="css-bl48kn-EmotionIconBase ex0cdmw0"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </button>
        <ul
          class="css-n5iuvv"
        >
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/item-1"
              id="vertical-item-1"
            >
              <span
                class="css-hrqj8j"
              >
                Item 1
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/item-2"
              id="vertical-item-2"
            >
              <span
                class="css-hrqj8j"
              >
                Item 2
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <button
          aria-expanded="false"
          class="css-mayb9l"
          data-testid="menu-sub-button"
          id="vertical-main-menu-3"
          type="button"
        >
          <span
            class="css-hrqj8j"
          >
            Main Menu 3
          </span>
          <svg
            aria-hidden="true"
            class="css-bl48kn-EmotionIconBase ex0cdmw0"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </button>
        <ul
          class="css-n5iuvv"
        >
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/item-1"
              id="vertical-item-1"
            >
              <span
                class="css-hrqj8j"
              >
                Menu 3 Item 1
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
          <li
            class="nk-menu-item css-1gz71w1"
          >
            <a
              class="css-46ys3g"
              data-testid="buttonLink"
              href="/menu-3-item-2"
              id="vertical-menu-3-item-2"
            >
              <span
                class="css-hrqj8j"
              >
                Menu 3 Item 2
              </span>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="css-2zdhyu"
            role="separator"
          >
            <hr
              aria-hidden="true"
              class="css-1uuatn7"
              data-testid="divider"
            />
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <div
        class="css-12ro3b"
      >
        <p
          class="css-9id5ai"
        >
          More
        </p>
      </div>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <a
          class="css-1r6nnlb"
          data-testid="buttonLink"
          href="/more-1"
          id="vertical-more-1"
        >
          <span
            class="css-hrqj8j"
          >
            More 1
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
      <li
        class="nk-menu-item css-1gz71w1"
      >
        <a
          class="css-1r6nnlb"
          data-testid="buttonLink"
          href="/more-2"
          id="vertical-more-2"
        >
          <span
            class="css-hrqj8j"
          >
            More 2
          </span>
        </a>
      </li>
      <li
        aria-hidden="true"
        class="css-2zdhyu"
        role="separator"
      >
        <hr
          aria-hidden="true"
          class="css-1uuatn7"
          data-testid="divider"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
